test/fail/basic_syntax/bad_typecast.lily
#[
SyntaxError: Cannot cast type 'Integer' to type 'String'.
    from bad_typecast.lily:6:
]#

10.@(String)
